GH-2104 Fix existing tests